<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verfication_code_from_authenticator_app"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/et_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_verification_code"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/submit" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:text="@string/setup_new_account"
        android:textColor="@color/colorAccent" />


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_new_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32sp"
        android:text="@string/status_placeholder"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="27sp" />

</RelativeLayout>